[gd_scene load_steps=4 format=3 uid="uid://c7fyt5hlcx4jv"]

[ext_resource type="Script" uid="uid://cu2q7pud83bp7" path="res://TankBattle/scenes/Bullet/bullet.gd" id="1_5hooh"]
[ext_resource type="PackedScene" uid="uid://3bst80cqf1sg" path="res://TankBattle/scenes/effects/explosion.tscn" id="2_msxy0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ah42e"]
size = Vector2(18, 10)

[node name="Bullet" type="Area2D"]
collision_layer = 9
collision_mask = 5
script = ExtResource("1_5hooh")
damage = 10
lifetime = 0.5

[node name="Sprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ah42e")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 0.5

[node name="Explosion" parent="." instance=ExtResource("2_msxy0")]
visible = false
scale = Vector2(0.5, 0.5)
animation = &"smoke"

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_explosion_animation_finished"]
